<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="bksp">BKSP</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="commaSign">,</string>
    <string name="equalSign">=</string>
    <string name="SignSign">±</string>
    <string name="divSign">/</string>
    <string name="mulSign">*</string>
    <string name="plusSign">+</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="subSign">-</string>
</resources>